--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	</nav>
 
 	<h1>3 random images</h1>
-	<img src="" alt="">
+	<img src="https://fastly.picsum.photos/id/123/200/300.jpg?hmac=uMA4z26tAYQnhW8_XlH0SoULB5z9s8tan-WCDkzbdMs" alt="">
 	<img src="" alt="">
 	<img src="" alt="">
 	
