--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 
 	<h1>3 random images</h1>
 	<img src="https://fastly.picsum.photos/id/123/200/300.jpg?hmac=uMA4z26tAYQnhW8_XlH0SoULB5z9s8tan-WCDkzbdMs" alt="">
-	<img src="" alt="">
+	<img src="https://fastly.picsum.photos/id/124/200/300.jpg?hmac=nYVSpzq7GaVkXrTk1whDiPbZdNRgtpJJXZJjvmUtFp0" alt="">
 	<img src="" alt="">
 	
 	
