--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<nav>
 		<ul>
-			<a href="https://picsum.photos/id/123/200/300">Home</a>
-			<a href="https://picsum.photos/id/124/200/300">About us</a>
-			<a href="https://picsum.photos/id/125/200/300">Contact us</a>
+			<li><a href="https://course.acciojob.com/open-web-editor?question=689854eb-c731-4552-8760-335f550fcf2c">Home</a></li>
+			<li><a href="https://course.acciojob.com/open-web-editor?question=689854eb-c731-4552-8760-335f550fcf2c">About us</a></li>
+			<li><a href="https://course.acciojob.com/open-web-editor?question=689854eb-c731-4552-8760-335f550fcf2c">Contact us</a></li>
 		</ul>
 	</nav>
 
