--- a/main.html
+++ b/main.html
@@ -16,9 +16,9 @@
 	</nav>
 
 	<h1>3 random images</h1>
-	<img src="https://fastly.picsum.photos/id/123/200/300.jpg?hmac=uMA4z26tAYQnhW8_XlH0SoULB5z9s8tan-WCDkzbdMs" alt="">
-	<img src="https://fastly.picsum.photos/id/124/200/300.jpg?hmac=nYVSpzq7GaVkXrTk1whDiPbZdNRgtpJJXZJjvmUtFp0" alt="">
-	<img src="https://fastly.picsum.photos/id/125/200/300.jpg?hmac=yLvRBwUcr6LYWuGaGk05UjiU5vArBo3Idr3ap5tpSxU" alt="">
+	<img src="https://fastly.picsum.photos/id/123/200/300.jpg?hmac=uMA4z26tAYQnhW8_XlH0SoULB5z9s8tan-WCDkzbdMs" alt="image1">
+	<img src="https://fastly.picsum.photos/id/124/200/300.jpg?hmac=nYVSpzq7GaVkXrTk1whDiPbZdNRgtpJJXZJjvmUtFp0" alt="image2">
+	<img src="https://fastly.picsum.photos/id/125/200/300.jpg?hmac=yLvRBwUcr6LYWuGaGk05UjiU5vArBo3Idr3ap5tpSxU" alt="image3">
 	
 	
 
